--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -6,12 +6,10 @@
     android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context=".MainActivity"
     tools:ignore="HardcodedText">
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/Communitymain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -27,18 +25,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:id="@+id/BottomBarMain"
+            android:id="@+id/BarCommunity"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginBottom="0dp"
             android:background="@color/Lime"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageButton
-                android:id="@+id/CalendarV"
+                android:id="@+id/CalendarV_Community"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,7 +47,7 @@
                 android:src="@drawable/bar_calendar" />
 
             <ImageButton
-                android:id="@+id/community_main"
+                android:id="@+id/button2_Community"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,7 +56,7 @@
                 android:src="@drawable/community" />
 
             <ImageButton
-                android:id="@+id/Add_button"
+                android:id="@+id/Add_button_Community"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -65,7 +65,7 @@
                 android:src="@drawable/bar_add" />
 
             <ImageButton
-                android:id="@+id/button4"
+                android:id="@+id/button4_Community"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -74,14 +74,17 @@
                 android:src="@drawable/bar_empty" />
 
             <ImageButton
-                android:id="@+id/button5"
+                android:id="@+id/button5_Community"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 android:src="@drawable/bar_empty" />
+
         </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
