Preferences for holidays and more than one

--- a/app/src/main/res/layout/activity_add_holiday.xml
+++ b/app/src/main/res/layout/activity_add_holiday.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,58 +12,64 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="36dp"
-        app:cardCornerRadius="36dp"
-        app:cardElevation="20dp">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
-            android:background="@color/white">
-
-            <TextView
-                android:id="@+id/addHolidayText"
-                android:layout_width="278dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="30dp"
-                android:text="Add your holiday!"
-                android:textAlignment="center"
-                android:textColor="@color/Lime"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/chooseDateText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Choose the date of your holiday"
-                android:textSize="16dp"
-                android:textAlignment="center"
-                android:textColor="@color/black" />
+            android:padding="16dp">
 
             <android.widget.CalendarView
                 android:id="@+id/calendarV"
-                android:layout_width="278dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
 
             <EditText
                 android:id="@+id/holidayNameEditText"
-                android:layout_width="278dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="Enter holiday name" />
+
+            <AutoCompleteTextView
+                android:id="@+id/countryAutoComplete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:hint="Select a country" />
+
+            <Spinner
+                android:id="@+id/activitySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
                 android:layout_height="52dp"
-                android:layout_marginTop="20dp"
-                android:drawablePadding="8dp"
-                android:hint="Holiday name"
-                android:drawableLeft="@drawable/baseline_celebration_24"/>
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/activityHead"
+                app:layout_constraintStart_toStartOf="@id/activityHead"
+                app:layout_constraintEnd_toEndOf="@id/activityHead"/>
+
+            <Spinner
+                android:id="@+id/hobbySpinner"
+                android:layout_marginTop="1dp"
+                android:layout_width="165dp"
+                android:layout_height="52dp"
+                android:spinnerMode="dropdown"
+                app:layout_constraintTop_toBottomOf="@id/hobbyHead"
+                app:layout_constraintStart_toStartOf="@id/hobbyHead"
+                app:layout_constraintEnd_toEndOf="@id/hobbyHead"/>
 
             <Button
                 android:id="@+id/saveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
-                android:text="Add" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
