Lobby changed to bool

--- a/app/src/main/res/layout/holidayapproval.xml
+++ b/app/src/main/res/layout/holidayapproval.xml
@@ -29,9 +29,9 @@
         <LinearLayout
             android:id="@+id/holidayNamesLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="450dp"
+            android:layout_marginTop="120dp"
             android:layout_marginEnd="8dp"
             />
 
