--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -125,19 +125,21 @@
 
         </LinearLayout>
 
+
         <TextView
             android:id="@+id/info_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
             android:text="Default Information"
+            android:textAlignment="textStart"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/BarProfile"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Bar_P" />
-
-
+            app:layout_constraintTop_toBottomOf="@+id/Bar_P"
+            app:layout_constraintVertical_bias="0.132" />
 
         <LinearLayout
             android:id="@+id/Bar_P"
