--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -20,11 +20,11 @@
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="360dp"
-            android:layout_marginBottom="324dp"
             android:background="@drawable/gradient_background"
             android:gravity="center"
 
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,8 +45,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="84dp"
             android:src="@drawable/circle_background"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp"
+            app:civ_border_color="@color/Lime"
+            app:civ_border_width="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Username"
-            android:textColor="@android:color/black"
+            android:textColor="@color/Lime"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/View_Image"
             app:layout_constraintStart_toStartOf="@+id/View_Image"
@@ -187,7 +187,7 @@
             android:id="@+id/upload_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="184dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/upload"
             app:layout_constraintBottom_toBottomOf="@+id/View_Image"
