--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="Dusty_White">#edf756</color>
     <color name="Pink_Sand">#ffa8B6</color>
     <color name="Dark_Sand">#a28089</color>
+    <color name="Gray">#a9a8aa</color>
 </resources>
+
