--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -53,7 +53,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Email"
                 android:padding="8dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/Gray" />
 
             <EditText
                 android:id="@+id/text_loginpassword"
@@ -66,7 +66,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="8dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/Gray" />
 
             <CheckBox
                 android:id="@+id/remember_me"
@@ -93,6 +93,7 @@
                 android:layout_marginTop="50dp"
                 android:backgroundTint="#74c69d"
                 android:text="Log in!"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
