--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,65 +18,126 @@
 
         <ImageView
             android:id="@+id/calendarIcon"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:src="@drawable/calendar_today"
+            android:layout_width="395dp"
+            android:layout_height="431dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.454"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.234" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/yearTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="36sp"
-            android:textColor="@android:color/white"
+            android:layout_marginTop="44dp"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="@+id/calendarIcon"
+            android:textColor="@android:color/white"
+            android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/idDate"
-            app:layout_constraintStart_toStartOf="@+id/calendarIcon"
             app:layout_constraintEnd_toEndOf="@+id/calendarIcon"
-            android:layout_marginTop="44dp"  />
+            app:layout_constraintHorizontal_bias="0.903"
+            app:layout_constraintStart_toStartOf="@+id/calendarIcon"
+            app:layout_constraintTop_toTopOf="@+id/calendarIcon" />
 
+        <TextView
+            android:id="@+id/month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toTopOf="@+id/idDate"
+            app:layout_constraintEnd_toEndOf="@+id/calendarIcon"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="@+id/calendarIcon"
+            app:layout_constraintTop_toTopOf="@+id/calendarIcon"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/idDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="4dp"
             android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="45sp"
+            android:textColor="@color/white"
+            android:textSize="200sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/calendarIcon"
+            app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="@+id/calendarIcon"
-            app:layout_constraintTop_toBottomOf="@+id/yearTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/yearTextView"
+            />
+
 
         <TextView
-            android:id="@+id/yourNotes"
+            android:id="@+id/dayname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/Lime"
+            android:textColor="@android:color/white"
             android:textSize="36sp"
-            app:layout_constraintBottom_toTopOf="@+id/editNotes"
+            app:layout_constraintEnd_toEndOf="@+id/idDate"
+            app:layout_constraintStart_toStartOf="@+id/idDate"
+            app:layout_constraintTop_toBottomOf="@+id/idDate"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="500dp"/>
+
+
+        <LinearLayout
+            android:id="@+id/Bar_new"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="start|center_vertical"
+            android:background="@drawable/bar_p_background"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarIcon" />
+            app:layout_constraintBottom_toTopOf="@+id/notes">
 
+            <TextView
+                android:id="@+id/yourNotes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
             <Button
                 android:id="@+id/editNotes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/BottomBarMain"
-                app:layout_constraintEnd_toEndOf="@+id/calendarIcon"
-                app:layout_constraintStart_toStartOf="@+id/calendarIcon"
-                app:layout_constraintTop_toBottomOf="@+id/calendarIcon" />
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/edit2"
+                android:tint="@android:color/white"
+                android:elevation="8dp"
+                app:layout_constraintEnd_toEndOf="@+id/Bar_new"
+                app:layout_constraintTop_toTopOf="@+id/Bar_new"/>
+
+        </LinearLayout>
+
+
+        <TextView android:id="@+id/notes"
+            android:layout_width="0dp"
+        android:layout_height="0dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/border"
+        android:gravity="top|start"
+        app:layout_constraintBottom_toTopOf="@+id/BottomBarMain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarIcon"
+        app:layout_constraintVertical_bias="0.0"
+         />
 
 
         <Button
@@ -86,8 +147,10 @@
             android:layout_marginStart="28dp"
             android:layout_marginTop="44dp"
             android:background="@drawable/main_account_button"
+            android:tint="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <LinearLayout
             android:id="@+id/BottomBarMain"
